--- a/.env.example
+++ b/.env.example
@@ -67,5 +67,5 @@ VITE_APP_NAME="${APP_NAME}"
 # Ship for Swag Configuration
 # GITHUB_USERNAME is automatically captured at build time from git remote
 # GITHUB_USERNAME=
-SHIPFORSWAG_HUB_URL=https://shipforswag.com
+SHIPFORSWAG_HUB_URL=https://shipforswag.laravel.cloud
 SHIPFORSWAG_PHONE_HOME=true
